--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <div id="box"></div>
     <div id="box2">盒子二號</div>
 
+    <input type="range" min="0" max="100" id="score" value="90">
+    <div id="result">分數為:</div>
+
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+
 <body>
 
     <script src="./main.js"></script>
